# SVMJNI

./: .gitignore  CMakeLists.txt  README.md
cmake/: android.cmake  linux.cmake  windows.cmake
common/: alg_define.h  data_type.h
examples/: CMakeLists.txt  SVMJNI.java  demo.cpp  demo_c.cpp
svm/: CMakeLists.txt
svm/include/: Module_svm.h  Module_svm_c_api.h  Module_svm_impl.h
svm/include/opencv/: Module_svm_opencv_impl.h
svm/jni/: SVMJNI.cpp  SVMJNI.h
svm/src/: Module_svm.cpp  Module_svm_impl.cpp
svm/src/opencv/: Module_svm_opencv_impl.cpp  Module_svm_opencv_impl_create.cpp
toolchains/: aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake
